Corrected Z-index

--- a/src/content/content.css
+++ b/src/content/content.css
@@ -1,6 +1,6 @@
 .quack-overflow-popup {
     opacity: 1;
-    z-index: 1;
+    z-index: 99999;
     box-shadow: 0 2px 8px #e4e6e8;
     background-color: #fff;
     border-color: #e4e6e8;
@@ -77,6 +77,8 @@
     width: 230px;
     padding-top: 24px;
     padding-bottom: 24px;
+    margin-left: 14px;
+    margin-right: 14px;
 }
 
 .quack-overflow-popup div.smallTextWrapper {
